# posh-overlay

./: .geminiignore  .gitignore  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  GEMINI.md  PrecisionDash.sln  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  request.md  test-lookup.js  tsconfig.json  tsconfig.main.json  vite.config.ts
.agent/rules/: specify-rules.md
.agents/commands/: telemetry-expert.md  ui-stylist.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  release-windows.yml  release.yml
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.storybook/: main.ts  preview.ts
agents/: WORKFLOW.md  __init__.py  config.json  graph.py  llm.py  main.py  nodes.py  state.py  tools.py
agents/memory/: constitution.md
packaging/Windows/: Package.appxmanifest  PrecisionDash.appinstaller
scripts/: fetch-car-data.mjs  run-mock-scenario.mjs
specs/001-core-overlay/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-packaged-auto-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-speed-display/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-mock-telemetry-scenarios/: spec.md
specs/004-telemetry-graph/: data-model.md  plan.md  spec.md  tasks.md
specs/005-add-speed-display/: plan.md  spec.md  tasks.md
specs/006-telemetry-graph/: plan.md  quickstart.md  research.md  spec.md  tasks.md
(+203 files in other folders)
